apps/romm/deployment-romm-mariadb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm-mariadb
  namespace: romm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: romm-mariadb
  template:
    metadata:
      labels:
        app: romm-mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: romm-db
