apps/romm/service-romm-mariadb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: romm-mariadb
  namespace: romm
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: romm-mariadb
