apps/romm/service-romm.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
  labels:
    app: romm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: romm
